add send email API

--- a/information-app/src/main/resources/application.properties
+++ b/information-app/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.kafka.consumer.group-id=twittur
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.auto-offset-reset=earliest
+
+##### MAIL #####
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
