--- a/information-service/pom.xml
+++ b/information-service/pom.xml
@@ -25,6 +25,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>vincentlow.twittur</groupId>
+            <artifactId>information-web-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
